--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
   <p>Generals gathered in their masses
     Just like witches at black masses
     Evil minds that plot
-  <span>destruction</span>
-  Sorcerers of death's construction
+  destruction</p>
+  <p>Sorcerers of death's construction
   In the fields the bodies burning
-  As the
-  <span>war</span>
+  As the war
   machine keeps turning
   Death and hatred to mankind
   Poisoning their
-  <span>brainwashed minds</span></p>
+  brainwashed minds</p>
 </div>
 
 
