--- a/index.html
+++ b/index.html
@@ -9,54 +9,42 @@
 
 
 
+    <div class="middle">
 
-<div class="1st">
-  <p>Generals gathered in their masses
-    Just like witches at black masses
-    Evil minds that plot
-  destruction</p>
-  <p>Sorcerers of death's construction
-  In the fields the bodies burning
-  As the war
-  machine keeps turning
-  Death and hatred to mankind
-  Poisoning their
-  brainwashed minds</p>
-</div>
+      <div class="OhContainer">
+        <h2 id="One">Oh lord yeah!</h2>
+        <h2 id="Two">Oh lord yeah!</h2>
+      </div>
+
+      <div class="textbox">
+        <p class="text" >Sorcerers of death's construction
+        In the fields the bodies burning
+        As the war
+        machine keeps turning
+        Death and hatred to mankind
+        Poisoning their
+        brainwashed minds</p>
+      </div>
+
+      <div class="textbox">
+        <p class="text" >Generals gathered in their masses
+        Just like witches at black masses
+        Evil minds that plot
+        destruction</p>
+      </div>
+
+      <div class="textbox">
+        <p class="text" >Politicians hide themselves away
+          They only started the war
+          Why should they go out to fight?
+          They leave that role to the poor</p>
+      </div>
+
+      <h3 id="blacksabbath"> Black Sabbath</h3>
+
+    </div>
 
 
-<h2>Oh lord yeah!</h2>
-
-
-<div class="2nd">
-  <p><span>Politicians hide themselves away</span>
-  They only started the war
-  Why should they go out to fight?
-  They leave that role to the poor
-</p>
-</div>
-
-<div class="3rd">
-  <p>Time will tell on their power minds
-  <span>Making war just for fun</span>
-  Treating people just like pawns in chess
-  Wait 'til their judgement day comes
-  Yeah!</p>
-</div>
-
-<div class="4th">
-  <p>Now in darkness world stops turning
-  Ashes where the <span>bodies burning</span>
-  No more war pigs have the power
-  Hand of God has struck the hour
-  <span>Day of judgement</span>, God is calling
-  On their knees the war pig's crawling
-  <span>Begging mercy </span>for their sins
-  Satan laughing spreads his wings
-  </p>
-</div>
-
-<h2>Oh lord yeah!</h2>
 
   </body>
 </html>
