--- a/index.html
+++ b/index.html
@@ -42,9 +42,17 @@
 
       <h3 id="blacksabbath"> Black Sabbath</h3>
 
+      <!-- <div class="circles">
+        <span class="circle"> </span>
+        <span class="circle"> </span>
+        <span class="circle"> </span>
+        <span class="circle"> </span>
+        <span class="circle"> </span>
+        <span class="circle"> </span>
+        <span class="circle"> </span>
+        <span class="circle"> </span>
+        <span class="circle"> </span>
+      </div> -->
     </div>
-
-
-
   </body>
 </html>
